# freeswitch

./: README.md  ci.sh  configure.ac
.github/workflows/: macos.yml
src/: switch_ivr_bridge.c  switch_ivr_originate.c
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/event_handlers/mod_rocketmq/: Makefile.am  Makefile.in  README.md  mod_rocketmq.cpp  mod_rocketmq.h  rocketmq.conf.xml
src/mod/loggers/mod_logfile/: README.md  mod_logfile.c
src/mod/loggers/mod_logfile/conf/autoload_configs/: logfile.conf.xml
